--- a/.github/workflows/auto-deploy-pages.yml
+++ b/.github/workflows/auto-deploy-pages.yml
@@ -45,4 +45,4 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./public
-          publish_branch: gh-pages  # deploying branch
+          publish_branch: gh_pages  # deploying branch
