--- a/themes/hackspace/_config.yml
+++ b/themes/hackspace/_config.yml
@@ -25,11 +25,9 @@ nav:
 # (see https://fontawesome.com/icons?d=gallery&s=brands);
 # only 'mail' is an exception.
 social_links:
-  github: http://github.com/probberechts/cactus-dark
-  twitter: /
-  facebook: /
-  linkedin: /
-  mail: mailto:name@email.com
+  github: http://github.com/xukangmin/
+  linkedin: https://www.linkedin.com/in/kangminxu/
+  mail: mailto:xukangmin@email.com
 
 # Customize the overview with displaying a tagcloud on the index page.
 # Options: https://hexo.io/docs/helpers.html#tagcloud
