--- a/.github/workflows/auto-deploy-pages.yml
+++ b/.github/workflows/auto-deploy-pages.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: Deploy Kangmin.io Website
 
 # Controls when the action will run. 
 on:
@@ -46,3 +46,4 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./public
           publish_branch: gh_pages  # deploying branch
+          cname: kangmin.io
